# electron-upgrade

./: README.md
electron-client/: .gitignore  index.html  main.js  package.json  renderer.js  style.css
electron-client/conf/: config.json
electron-client/js/: down.js  ipc.js
electron-client/subpage/: setting.css  setting.html  setting.js  upgrade.css  upgrade.html  upgrade.js
generate_package/: .gitignore  Cargo.toml
generate_package/src/: main.rs
generate_package/src/examples/: copy_file.rs  zip_archive.rs
upgrade_pack_generate/: Cargo.toml
upgrade_pack_generate/src/examples/: file_md5.rs  zip_archive.rs
